# alfred-checkvist

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: checkvist.rs  main.rs
workflow/: info.plist
