[package]
name = "alfred-checkvist"
version = "0.1.0"
authors = ["Roman Peshkov <peshkovroman@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alfred = "4"
checkvist = { path = "../checkvist-rs" }
#checkvist = "0.1"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
